Add chinese support

--- a/full/Dockerfile
+++ b/full/Dockerfile
@@ -53,10 +53,7 @@ RUN set -eux \
         gdal-bin \
         tesseract-ocr \
         tesseract-ocr-eng \
-        tesseract-ocr-ita \
-        tesseract-ocr-fra \
-        tesseract-ocr-spa \
-        tesseract-ocr-deu \
+        tesseract-ocr-chi-sim \
     && echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections \
     && DEBIAN_FRONTEND=noninteractive apt-get install --yes --no-install-recommends \
         xfonts-utils \
